[project]
name = "ha-blueprint-toolkit"
version = "1.0.0"
description = "Home Assistant blueprints backed by a testable HA integration"
requires-python = ">=3.11"
dependencies = [
    "epilatow-repo-shared",
    "pytest",
]

[tool.uv.sources]
epilatow-repo-shared = { git = "https://github.com/epilatow/repo-shared", rev = "884175abb6bab9147b6742deb4351d4841654df3" }

[tool.repo-shared.markdown]
# Repo's pre-existing markdown was wrapped at 78 (markdownlint.json
# pre-onboarding had ``line_length: 78``). Pinned here so the
# shared default 79 doesn't reflow every paragraph in every doc on
# the next repo-shared bump.
wrap = 78

[tool.repo-shared.code-quality]
# Project-wide fallback for files WITHOUT their own PEP 723
# ``# /// script`` block (the integration package modules and
# ``conftest.py``). The delivered ``test_code_quality.py`` runs
# ``mypy --strict`` per file; without this, ``homeassistant.*``,
# ``voluptuous``, ``yaml``, etc. resolve to ``Any`` and ``--strict``
# then errors on every ``Any`` subclass / untyped decorator.
# ``pytest-homeassistant-custom-component`` (HACC) ships HA core as
# a transitive dependency, so its pin picks which HA API surface
# mypy validates against. ``==0.13.324`` matches HA 2026.4.x which
# is what the user's HAOS runs; an unpinned (latest) HACC pulls a
# newer HA whose API surface no longer matches HAOS's runtime
# (e.g. ``entity_registry.integration_entities`` got removed
# between 2026.4 and 2026.5). Bump this pin in lockstep with HAOS.
# ``types-PyYAML`` adds the stubs PyYAML itself doesn't ship.
mypy-extra-deps = [
    "pytest-homeassistant-custom-component==0.13.331",
    "types-PyYAML",
]
# HACC 0.13.324 only installs on Python 3.14; the integration's own
# code targets 3.11, but analyzing 3.11 code under a 3.14 mypy is
# a superset and safe. The HACC-coupled test files already pin
# ``requires-python = ">=3.14"`` in their PEP 723 blocks.
mypy-python-version = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests", "_repo_shared/tests"]
markers = [
    "docker: full-stack docker integration tests (slow, opt-in; run with 'pytest -m docker')",
]
# Exclude docker tests from the default run. tests/run_all.py
# uses tests_dir.glob('test_*.py'), which is non-recursive, so
# it never discovers tests/docker/test_*.py either way.
addopts = "-m 'not docker'"
# pytest-homeassistant-custom-component (used by
# test_hacc_harness.py) provides an async ``hass`` fixture.
# In auto mode pytest-asyncio adopts each test's coroutine
# without requiring per-test @mark.asyncio decoration; this
# is what HA's own integration repos use. No effect on the
# existing sync tests.
asyncio_mode = "auto"

[tool.ruff]
line-length = 80
target-version = "py311"
cache-dir = "/tmp/ruff_cache"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
# HACC 0.13.324's HA stubs use Python 3.12+ syntax (``type X[T] = ...``).
# Bumping the analyzer to 3.14 lets it parse the stubs; the integration's
# own code targets 3.11, and 3.11 code analyzed under a 3.14 mypy is a
# strict superset (no false negatives).
python_version = "3.14"
strict = true
# No ``files = [...]`` set: the canonical type check is the
# delivered ``_repo_shared/tests/test_code_quality.py``,
# which runs ``mypy --strict`` once per discovered file.
# HA-coupled files install
# ``pytest-homeassistant-custom-component`` via their PEP 723
# blocks (project-wide fallback in
# ``[tool.repo-shared.code-quality] mypy-extra-deps``) so
# ``homeassistant.*`` resolves against real types. A bare
# ``uvx mypy`` from a checkout without those deps will not
# resolve those imports; run ``uv run pytest _repo_shared/tests``
# instead.
cache_dir = "/tmp/mypy_cache"

[[tool.mypy.overrides]]
module = ["homeassistant.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jinja2", "jinja2.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# scripts/zwave_network_info.py bootstraps its own venv for
# these at runtime; the host dev environment may not have them
# installed. The ZRM bridge module imports socketio lazily,
# and the ZRM handler imports socketio.exceptions to classify
# bridge-timeout errors.
module = ["socketio", "socketio.exceptions", "aiohttp"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# voluptuous is a vendored HA dep; the host dev environment
# may not have it installed. The integration's TEC handler
# uses vol.Schema to validate service-call payloads.
module = ["voluptuous"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# scripts/dev-install.py imports the integration package
# off a runtime sys.path entry built from the deployed
# build dir; the host dev environment does not have the
# blueprint_toolkit package on its default sys.path.
module = ["blueprint_toolkit", "blueprint_toolkit.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# pytest-homeassistant-custom-component ships no ``py.typed``
# marker, so ``mypy --strict`` flags every import from it as
# ``[import-untyped]``. The HA-coupled test files import
# ``MockConfigEntry`` / ``ClientSessionGenerator`` from it.
module = ["pytest_homeassistant_custom_component.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# scripts/render_docs.py and the bundled zwave_network_info
# CLI are bare scripts the test files import off a runtime
# sys.path entry; mypy's import resolver can't see them.
module = ["render_docs", "zwave_network_info"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# The handler test suites monkeypatch helper functions
# (schedule_periodic_with_jitter, validate_and_join_regex_patterns,
# entity_registry, ...) on the handler module -- the standard
# patch-where-used pattern. Without this, ``mypy --strict``'s
# no_implicit_reexport rejects ``handler.<name>`` access from
# the tests.
module = ["custom_components.blueprint_toolkit.*.handler"]
implicit_reexport = true
